# x402-payment-service

./: .gitignore  README.md  pyproject.toml
src/x402_payment_service/: __init__.py  facilitator_ext.py  payment_service.py  paywall_adapter.py
src/x402_payment_service/static/: paywall_adapter.js
