[project]
name = "x402-payment-service"
version = "0.1.0"
description = "A payment service for handling x402 payment verification and settlement"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "x402",
]

[tool.uv.sources]
x402 = { git = "https://github.com/coinbase/x402.git", subdirectory = "python/x402" }
