[project]
name = "x402-payment-service"
version = "0.1.0"
description = "A payment service for handling x402 payment verification and settlement"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "x402",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
x402_payment_service = ["static/*.js"]

[tool.uv.sources]
x402 = { git = "https://github.com/coinbase/x402.git", subdirectory = "python/x402", rev = "95b01e1463ee717cda3a80c3883864d4728e8408" }